--- a/index.css
+++ b/index.css
@@ -43,6 +43,7 @@ body {
 .title {
   font-size: max(7.5vw, 2em, 4rem);
   text-align: center;
+  margin-top: 3em;
 }
 
 .svg {
